2012-01-22  Vladimir Serbinenko  <phcoder@gmail.com>
2012-01-22  Zachary Bedell <pendorbound@gmail.com>
2012-01-22  Richard Laager <rlaager@wiktel.com>

	* grub-core/fs/zfs/zfs.c (uberblock_verify): New parameter size.
	All users updated.
	(find_bestub): Determine correct size.
	(fill_vdev_info_real): Fill ashift. New argument. All users updated.
	(scan_disk): Align the size down.
	Call check pool before find_bestub to have ashift.

2012-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (malloc_in_range): Remove couple of
	dprintf in no-malloc zone.

2012-01-22  Mario Limonciello <mario_limonciello@dell.com>

	* configure.ac: Add back in test for limits.h.

2012-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Support 4K-sector NTFS.

	* include/grub/ntfs.h (GRUB_NTFS_MAX_MFT): Increase to 8.
	(grub_ntfs_data): Remove blocksize.
	* grub-core/fs/ntfs.c (fixup): Fix size comparison.
	Remove data argument. All users updated.

2012-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/arc/init.c (grub_total_modules_size): Mark as
	being in .text to avoid dprel references.
	* include/grub/mips/loongson/kernel.h (grub_arch_machine): Likewise.
	* include/grub/mips/loongson/memory.h (grub_arch_memsize): Likewise.
	(grub_arch_highmemsize): Likewise.
	* include/grub/mips/loongson/time.h (grub_arch_busclock): Likewise.
	* include/grub/mips/qemu_mips/memory.h (grub_arch_memsize): Likewise.
	* include/grub/mips/time.h (grub_arch_cpuclock): Likewise.

2012-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Support powerpc with GCC that defines __PPC__ but not __powerpc__.

	* config.h.in (__powerpc__) [__PPC__ && !__powerpc__]: New definition.
	* grub-core/lib/setjmp.S: Treat __PPC__ as equivalent to __powerpc__.

2012-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/datetime.h (grub_get_datetime_cmos): Don't define in
	GRUB_UTIL.
	(grub_set_datetime_cmos): Likewise.
